--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -209,6 +209,7 @@
             text-transform: uppercase;
             letter-spacing: 1.3px;
             position: relative;
+            margin-top: 2rem;
             @media (max-width: 480px) {
                 margin-left: 20px;
                 margin-top: 0;
@@ -221,8 +222,8 @@
                 padding: 5px;
             }
         }
-        border-top: 1px solid;
-        border-bottom: 1px solid;
+        border-top: 1px solid #dbdbdb;
+        border-bottom: 1px solid #dbdbdb;
     }
     .container {
         .block_newsletter {
