--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -83,11 +83,9 @@
                                 width: 100%;
                                 bottom: 2px;
                                 position: relative;
-
                                 .h3 {
                                     width: 80%;
                                 }
-
                                 #product-subtitle {
                                     margin: 5px 0 15px 0;
                                     p {
@@ -129,7 +127,6 @@
                                 .add-to-cart-or-refresh {
                                     position: absolute;
                                     top: 0;
-                                    
                                     form {
                                         .btn {
                                             border: none;
@@ -194,15 +191,12 @@
             article {
                 .product-description {
                     position: relative;
-
                     .h3 {
                         width: 75%;
                     }
-
                     #product-subtitle {
                         width: 65%;
                     }
-
                     .product-price-and-shipping {
                         position: absolute;
                         top: 100px;
@@ -222,8 +216,7 @@
                     .add-to-cart-or-refresh {
                         position: absolute;
                         top: 0;
-                        right:0;
-
+                        right: 0;
                         form {
                             .btn {
                                 border: none;
@@ -266,6 +259,9 @@
             font-weight: 400;
             font-size: 1.3em;
             line-height: 1.3;
+        }
+        img {
+            border: 1px solid #dbdbdb;
         }
     }
 }
