--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -259,6 +259,7 @@
             font-weight: 400;
             font-size: 1.3em;
             line-height: 1.3;
+            padding: 20px 40px 0 40px;
         }
         img {
             border: 1px solid #dbdbdb;
