--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -210,6 +210,7 @@
                                             flex-direction: row;
                                             justify-content: space-between;
                                             align-items: center;
+                                            margin-top: 20px;
 
                                             .product-nutriscore {
                                                 div {
@@ -377,11 +378,11 @@
     }
 
     .info-detailed {
-    width: 100%;
-    height: 600px;
-    padding-left: 0;
-    padding-right: 0;
-    padding-top: 30px;
+        width: 100%;
+        padding-left: 0;
+        padding-right: 0;
+        padding-top: 30px;
+        margin-bottom: 30px;
 
         #main-menu {
             
@@ -547,79 +548,96 @@
 }
 
 .actu {
+    margin-top: 80px;
+
     .info-actu {
         margin-bottom: 60px;
         padding-top: 30px;
-        border-top: 1px solid $greylight;
 
         h2 {
-            margin-bottom: 30px;
+            margin-bottom: 80px;
             font-family: $roboto;
             font-size: 18px;
-            letter-spacing: 1;
+            letter-spacing: 1.8px;
             text-transform: uppercase;
             text-align: center;
         }
-    }
+    
 
-    .flex {
-        display: flex;
-        padding-left: 20px;
-        width: 70%;
+        .flex {
+            position: relative;
+            height: 520px;
+            margin-bottom: 150px;
 
-        @media screen and (min-width: 767px) and (max-width: 1024px) {
-            width: 100%;
-        }
-
-        @media screen and (max-width: 767px) {
-            width: 100%;
-            flex-direction: column;
-            align-items: center;
-        }
-
-
-        > div {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-
-            
-
-        > div {
-
-            &:first-child {
-                display: flex;
-                flex-direction: column;
-
-                img {
-                    height: 300px;
-                    width: auto;
-                }
-
-                p {
-                    font-weight: bold;
-                    text-align: center;
-                    margin-top: 10px;
-
-                    span {
-                        display: block;
-                    }
-                }
+            @media screen and (min-width: 767px) and (max-width: 1024px) {
+                width: 100%;
             }
-            &:last-child {
+
+            @media screen and (max-width: 767px) {
+                width: 100%;
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .provenance {
+                width: 694px;
+                height: 462px;
+                background-image: url("../img/provenance.png");
+                background-size: contain;
+            }
+
+            .secret_cuisine {
+                width: 694px;
+                height: 461px;
+                background-image: url("../img/secret.png");
+                background-size: contain;
+                float: right;
+            }
+
+
+            .recyclage {
+                width: 694px;
+                height: 520px;
+                background-image: url("../img/recyclage.png");
+                background-size: contain;
+            }
+
+                
+
+            .text-info {
+                background-color: #fef9f4;
+                padding: 40px 30px;
+                position: absolute;
+                top: 25%;
+                right: 70px;
+                width: 500px;
+                
                 p {
-                    margin-left: 100px;
-                    font-size: 14px;
+                    font-size: 21px;
+                    font-family: $unna;
+                    margin: 0;
+                    line-height: 30px;
 
                     @media screen and (max-width: 767px) {
                         margin-left: 0;
                         margin-top: 30px;
                     }
                 }
+                
+            }
+
+        }
+    }
+
+    .secret {
+        .text-info {
+            left: 70px;
+            top: 15%;
+
+            p {
+                padding-bottom: 20px;
             }
         }
-
     }
 
     .text-info {
