--- a/assets/scss/megamenu.scss
+++ b/assets/scss/megamenu.scss
@@ -7,13 +7,15 @@
 // }
 ul.top-menu[data-child="1"] li.menu-item:hover .sub-menu {
     opacity: 1;
-    display: flex;
     visibility: visible;
+}
+
+ul.top-menu[data-child="1"] li.menu-item .sub-menu {
     background-color: #FEF9F4;
+    display: flex;
 }
 
 .top-menu .sub-menu.collapse {
-    display: flex;
     justify-content: space-between;
     padding: 0 30px;
     height: 800px;
