--- a/assets/scss/megamenu.scss
+++ b/assets/scss/megamenu.scss
@@ -1,12 +1,10 @@
 @import "global.scss";
-
-ul.top-menu[data-child="1"] li.menu-item .sub-menu {
-    opacity: 1;
-    display: flex;
-    visibility: visible;
-    background-color: #FEF9F4;
-}
-
+// ul.top-menu[data-child="1"] li.menu-item .sub-menu {
+//     opacity: 1;
+//     display: flex;
+//     visibility: visible;
+//     background-color: #FEF9F4;
+// }
 ul.top-menu[data-child="1"] li.menu-item:hover .sub-menu {
     opacity: 1;
     visibility: visible;
@@ -158,10 +156,8 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
                 }
             }
         }
-
         &:last-child {
             margin: 30px 0;
-
             img {
                 width: 100%;
                 object-fit: cover;
